--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/BGLogo.png" alt="" /></span>
+						<span class="logo"><img src="images/BGlogo.png" alt="" /></span>
 						<h1>Shuteng Niu, Ph.D.</h1>
 						<p>All models are wrong, but some are useful.</p>
 					</header>
@@ -58,7 +58,7 @@ Address: <a href="https://www.google.com/maps/place/Hayes+Hall,+Bowling+Green,+O
 Phone: 419-372-3469 <br />
 Email: <a href = "mailto: sniu@bgsu.edu">sniu@bgsu.edu</a></p>										
 									</div>
-									<span class="image"><img src="images/Me.jpg" alt="" /></span>
+									<span class="image"><img src="images/Me.JPG" alt="" /></span>
 								</div>
 							</section>
 
