--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I am currently an assistant professor of Computer Science at Bowling Green State University. Before joining BGSU, I was a Postdoc research fellow (July 2021) at School of Biomedical Informatics UTHealth, under the supervision of <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a>. Before that, I received my Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
+										<p>I am currently an Assistant Professor of Computer Science at Bowling Green State University. Before joining BGSU, I was a Postdoc research fellow (July 2021) at School of Biomedical Informatics UTHealth, under the supervision of <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a>. Before that, I received my Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
 
 <h2>Teaching</h2>
 										</header>
@@ -122,7 +122,7 @@ Visiting: multiple openings for visiting PhD students and visiting scholars.</p>
 I started training as a competitive badminton player at early age and retired after college. I participated in many state and national tournaments in US and received quite a few medals. As for now, I still keep it as my favorite sport.</a> <br /><br />
 
 Climbing: <br />
-Due my injuries, I started shifting to climbing (mainly bouldering) since 2021. I plan to go outdoor to feel the touch of real rocks and breath the fresh air. </p>
+I found my passion in climbing (mainly bouldering for now) since 2021. I plan to go outdoor to feel the touch of real rocks and breath the fresh air. </p>
 
 							</section>
 
