--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ Email: <a href = "mailto: sniu@bgsu.edu">sniu@bgsu.edu</a></p>
 										<p>Our research interests include Machine Learning, Transfer Learning (Deep Transfer Learning), and Biomedical Informatics. More specifically, we are interested in exploring distant-domain transfer, cross-modality-transfer, graph neural works, and biomedical application with ML. Deep learning is great but it is facing significant difficulties, including but not limited to, insufficient data, incompatible computational power, and dynamic input structure. Below is a short list of open challenges:<br /><br />
 
 1. Transfer Learning-enabled Graph Neural Networks <br />
-2. HIV prediction/prevention with Graph Neural Networks <br />
+2. HIV Prediction/Prevention with Graph Neural Networks <br />
 3. Large-Scale Electronic Health Record (EHR) Mining <br /> 
-4. Anomaly Detect for Imbalance Medical Data Mining </a></p>										
+4. Anomaly Detection for Imbalance Medical Data Mining </a></p>										
 							</section>
 
 																	<!-- Publication -->
