--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I am currently an Assistant Professor of Computer Science at Bowling Green State University. Before joining BGSU, I was a Postdoc research fellow (July 2021) at School of Biomedical Informatics UTHealth, under the supervision of <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a>. Before that, I received my Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
+										<p>Dr. Niu is an Assistant Professor of Computer Science at Bowling Green State University. Before joining BGSU, he was a Postdoc research fellow at School of Biomedical Informatics UTHealth, under the supervision of <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a>. Before that, He received his Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
 
 <h2>Teaching</h2>
 										</header>
@@ -56,7 +56,8 @@
 										<p>
 Address: <a href="https://www.google.com/maps/place/Hayes+Hall,+Bowling+Green,+OH+43403/@41.3778986,-83.6417875,17z/data=!3m1!4b1!4m5!3m4!1s0x883c0badd1809351:0x52fd781468c3b90d!8m2!3d41.3778986!4d-83.6395988">241 Hayes Hall, Bowling Green, Ohio, US, 43403</a><br />
 Phone: 419-372-3469 <br />
-Email: <a href = "mailto: sniu@bgsu.edu">sniu@bgsu.edu</a></p>										
+Email: <a href = "mailto: sniu@bgsu.edu">sniu@bgsu.edu</a><br />
+Office Hours (Fall 2021): MW 1:30pm - 3:00pm, other times by appointment.</p>										
 									</div>
 									<span class="image"><img src="images/Me.JPG" alt="" /></span>
 								</div>
@@ -69,7 +70,7 @@ Email: <a href = "mailto: sniu@bgsu.edu">sniu@bgsu.edu</a></p>
 										<header class="major">
 											<h2>Research</h2>
 										</header>
-										<p>Our research interests include Machine Learning, Transfer Learning (Deep Transfer Learning), and Biomedical Informatics. More specifically, we are interested in exploring distant-domain transfer, cross-modality-transfer, graph neural works, and biomedical application with ML. Deep learning is great but it is facing significant difficulties, including but not limited to, insufficient data, incompatible computational power, and dynamic input structure. Below is a short list of open challenges:<br /><br />
+										<p>Dr. Niu's research area of interests include Machine Learning, Transfer Learning (Deep Transfer Learning), and Biomedical Informatics. More specifically, he is interested in exploring distant-domain transfer, cross-modality-transfer, graph neural works, and biomedical application with ML. Deep learning is great but it is facing significant difficulties, including but not limited to, insufficient data, incompatible computational power, and dynamic input structure. Below is a short list of open challenges:<br /><br />
 
 1. Transfer Learning-enabled Graph Neural Networks <br />
 2. HIV Prediction/Prevention with Graph Neural Networks <br />
@@ -119,10 +120,10 @@ Visiting: multiple openings for visiting PhD students and visiting scholars.</p>
 										
 <p>Badminton: <br />
 
-I started training as a competitive badminton player at early age and retired after college. I participated in many state and national tournaments in US and received quite a few medals. As for now, I still keep it as my favorite sport.</a> <br /><br />
+He started training as a competitive badminton player at early age and retired after college. He participated in many state and national tournaments in US and received quite a few medals. As for now, he still keeps it as his favorite sport.</a> <br /><br />
 
 Climbing: <br />
-I found my passion in climbing (mainly bouldering for now) since 2021. I plan to go outdoor to feel the touch of real rocks and breath the fresh air. </p>
+He found his passion in climbing (mainly bouldering for now) since 2021. He plans to go outdoor to feel the touch of real rocks and breath the fresh air. </p>
 
 							</section>
 
