--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 
 <h2>Teaching</h2>
 										</header>
-										<p>Fall 2021, <a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs2010.pdf">CS 2021: Programming Fundamentals.</a></p>
+										<p>Fall 2021 <br />
+											<a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs2010.pdf">CS 2021: Programming Fundamentals.</a> <br />
+									        <p>Spring 2022 <br />
+											<a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs2010.pdf">CS 2021: Programming Fundamentals.</a> <br />
+ 											<a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs6500.pdf">CS 6500: Big Data Analytics.</a></p>
+								
 
 <h2>Contact</h2>
 										</header>
@@ -75,7 +80,7 @@ Office Hours (Fall 2021): MW 1:30pm - 3:00pm, other times by appointment.</p>
 1. Transfer Learning-enabled Graph Neural Networks <br />
 2. HIV Prediction/Prevention with Graph Neural Networks <br />
 3. Large-Scale Electronic Health Record (EHR) Mining <br /> 
-4. Anomaly Detection for Imbalance Medical Data Mining </a></p>										
+4. Anomaly Detection for Imbalance Medical Data Mining </a> </p>										
 							</section>
 
 																	<!-- Publication -->
@@ -108,7 +113,10 @@ Shuteng Niu, Assistant Professor, Computer Science, Bowling Green State Universi
 
 Openings: <br />
 PhD: multiple openings for PhD in Data Science with full financial support. <br />
-Visiting: multiple openings for visiting PhD students and visiting scholars.</p>
+Visiting: multiple openings for visiting PhD students and visiting scholars. <br />
+		
+Potential External Openings: <br />
+UTHealth: <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a> is currently looking for Postdoc Research Fellows and PrePhD students. The SBMI at UThealth is the largest biomedical informatics center in the world. Please contact Dr. Cui Tao if you are interested. <br /></p>
 
 							</section>
 
