--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 <h2>Teaching</h2>
 										</header>
 										<p>Fall 2021 <br />
-											<a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs2010.pdf">CS 2021: Programming Fundamentals.</a> <br />
+											<a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs2010.pdf">CS 2010: Programming Fundamentals.</a> <br />
 									        <p>Spring 2022 <br />
-											<a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs2010.pdf">CS 2021: Programming Fundamentals.</a> <br />
+											<a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs2010.pdf">CS 2010: Programming Fundamentals.</a> <br />
  											<a href="https://www.bgsu.edu/content/dam/BGSU/college-of-arts-and-sciences/computer-science/documents/syllabi/cs6500.pdf">CS 6500: Big Data Analytics.</a></p>
 								
 
@@ -113,7 +113,7 @@ Shuteng Niu, Assistant Professor, Computer Science, Bowling Green State Universi
 
 Openings: <br />
 PhD: multiple openings for PhD in Data Science with full financial support. <br />
-Visiting: multiple openings for visiting PhD students and visiting scholars. <br />
+Visiting: multiple openings for visiting PhD students and visiting scholars. <br /><br />
 		
 Potential External Openings: <br />
 UTHealth: <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a> is currently looking for Postdoc Research Fellows and PrePhD students. The SBMI at UThealth is the largest biomedical informatics center in the world. Please contact Dr. Cui Tao if you are interested. <br /></p>
