--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 Address: <a href="https://www.google.com/maps/place/Hayes+Hall,+Bowling+Green,+OH+43403/@41.3778986,-83.6417875,17z/data=!3m1!4b1!4m5!3m4!1s0x883c0badd1809351:0x52fd781468c3b90d!8m2!3d41.3778986!4d-83.6395988">241 Hayes Hall, Bowling Green, Ohio, US, 43403</a><br />
 Phone: 419-372-3469 <br />
 Email: <a href = "mailto: sniu@bgsu.edu">sniu@bgsu.edu</a><br />
-Office Hours (Fall 2021): MW 1:30pm - 3:00pm, other times by appointment.</p>										
+Office Hours (Spring 2022): Tue 2PM - 4PM, other times by appointment.</p>										
 									</div>
 									<span class="image"><img src="images/Me.JPG" alt="" /></span>
 								</div>
@@ -111,6 +111,10 @@ Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYO
 
 Shuteng Niu, Assistant Professor, Computer Science, Bowling Green State University</a> <br /><br />
 
+<p>Students: <br />
+
+Donghyun Jeon, Ph.D. Candidate in Data Science, Computer Science, Bowling Green State University</a> <br /><br />		
+
 Openings: <br />
 PhD: multiple openings for PhD in Data Science with full financial support. <br />
 Visiting: multiple openings for visiting PhD students and visiting scholars. <br /><br />
@@ -128,10 +132,10 @@ UTHealth: <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a> is curre
 										
 <p>Badminton: <br />
 
-He started training as a competitive badminton player at early age and retired after college. He participated in many state and national tournaments in US and received quite a few medals. As for now, he still keeps it as his favorite sport.</a> <br /><br />
+He plans compete in NC Open and Chicago Open in 2022.</a> <br /><br />
 
 Climbing: <br />
-He found his passion in climbing (mainly bouldering for now) since 2021. He plans to go outdoor to feel the touch of real rocks and breath the fresh air. </p>
+He plans to go back to chattanooga for unfinished outdoor projects in 2022. </p>
 
 							</section>
 
