--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Donghyun Jeon, Ph.D. Candidate in Data Science, Computer Science, Bowling Green 
 Zenan Sun, Ph.D. Candidate in Data Science, Computer Science, Bowling Green State University</a> <br /><br />
 
 Openings: <br />
-PhD: I actively looking self-motivated studetns who have interests in machine learning, data science, and biomedical applications. <br /><br />
+PhD: I am actively looking self-motivated studetns who have interests in machine learning, data science, and biomedical applications. <br /><br />
 		
 Potential External Openings: <br />
 UTHealth: <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a> is currently looking for Postdoc Research Fellows and PrePhD students. The SBMI at UThealth is the largest biomedical informatics center in the world. Please contact Dr. Cui Tao if you are interested. <br /></p>
