--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/BGlogo.png" alt="" /></span>
+						<span class="logo"><img src="images/ERAUlogo.png" alt="" /></span>
 						<h1>Shuteng Niu, Ph.D.</h1>
 						<p>All models are wrong, but some are useful.</p>
 					</header>
