--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/ERAUlogo.png" alt="" /></span>
-						<h1>Shuteng Niu, Ph.D.</h1>
+						<h1>Yang Chao, Ph.D. Student</h1>
 						<p>All models are wrong, but some are useful.</p>
 					</header>
 
