--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/ERAUlogo.png" alt="" /></span>
+						<span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span>
 						<h1>Yang Chao, Ph.D. Student</h1>
 						<p>All models are wrong, but some are useful.</p>
 					</header>
@@ -66,7 +66,7 @@ Phone: 419-372-3469 <br />
 Email: <a href = "mailto: sniu@bgsu.edu">sniu@bgsu.edu</a><br />
 Office Hours (Spring 2022): Tue 2PM - 4PM, other times by appointment.</p>										
 									</div>
-									<span class="image"><img src="images/Me.JPG" alt="" /></span>
+									<span class="image"><img src="images/Me.jpg" alt="" /></span>
 								</div>
 							</section>
 
