--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYO
 						<!-- People -->
 							<section id="Pep" class="main">
 								<header class="major">
-									<h2>The Team</h2>
+									<h2>Research Group</h2>
 									</header>
 										
 <p>Faculty Members: <br />
@@ -117,12 +117,6 @@ Shuteng Niu, Assistant Professor, Computer Science, Bowling Green State Universi
 
 Donghyun Jeon, Ph.D. Candidate in Data Science, Computer Science, Bowling Green State University</a> <br />		
 Zenan Sun, Ph.D. Candidate in Data Science, Computer Science, Bowling Green State University</a> <br /><br />
-
-Openings: <br />
-PhD: I am actively looking self-motivated studetns who have interests in machine learning, data science, and biomedical applications. <br /><br />
-		
-Potential External Openings: <br />
-UTHealth: <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a> is currently looking for Postdoc Research Fellows and PrePhD students. The SBMI at UThealth is the largest biomedical informatics center in the world. Please contact Dr. Cui Tao if you are interested. <br /></p>
 
 							</section>
 
