--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<ul>
 							<li><a href="#Home" class="active">Home</a></li>
 							<li><a href="#Rsc">Research</a></li>
-							<li><a href="#Pub">Publication</a></li>
+							<li><a href="#Pub">Publications</a></li>
 							<li><a href="#Pep">People</a></li>
 							<li><a href="#MyHob">My Little Hobbies</a></li>
 						</ul>
@@ -75,7 +75,7 @@ Office Hours (Spring 2022): Tue 2PM - 4PM, other times by appointment.</p>
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Research</h2>
+											<h2>Research Topics</h2>
 										</header>
 										<p>Dr. Niu's research area of interests include Machine Learning, Transfer Learning (Deep Transfer Learning), and Biomedical Informatics. More specifically, he is interested in exploring distant-domain transfer, cross-modality-transfer, graph neural works, and biomedical application with ML. Deep learning is great but it is facing significant difficulties, including but not limited to, insufficient data, incompatible computational power, and dynamic input structure. Below is a short list of open challenges:<br /><br />
 
@@ -88,7 +88,7 @@ Office Hours (Spring 2022): Tue 2PM - 4PM, other times by appointment.</p>
 																	<!-- Publication -->
 							<section id="Pub" class="main">
 								<header class="major">
-									<h2>Publication</h2>
+									<h2>Publications</h2>
 										</header>
 										<p>Featured Articles:<br />
 
@@ -106,7 +106,7 @@ Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYO
 						<!-- People -->
 							<section id="Pep" class="main">
 								<header class="major">
-									<h2>Research Group</h2>
+									<h2>Research Team</h2>
 									</header>
 										
 <p>Faculty Members: <br />
