--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span>
-						<h1>Yang Chao, Ph.D. Student</h1>
+						<h1>Yang Chao, Ph.D. student</h1>
 						<p>All models are wrong, but some are useful.</p>
 					</header>
 
@@ -111,7 +111,8 @@ Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYO
 										
 <p>Faculty Members: <br />
 
-Shuteng Niu, Assistant Professor, Computer Science, Bowling Green State University</a> <br /><br />
+Sandra Boetcher, Professor, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
+Mark Ricklick, Assistant Professor, Aerospace Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
 
 <p>Students: <br />
 
