--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@ Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYO
 										
 <p>Faculty Members: <br />
 
-Sandra Boetcher, Professor, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
-Mark Ricklick, Assistant Professor, Aerospace Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
+Dr. Sandra Boetcher, Professor, ASME Fellow, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br />
+Dr. Mark Ricklick, Associate Professor, Aerospace Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
 
-<p>Students: <br />
+<p>Student Members: <br />
 
-Donghyun Jeon, Ph.D. Candidate in Data Science, Computer Science, Bowling Green State University</a> <br />		
-Zenan Sun, Ph.D. Candidate in Data Science, Computer Science, Bowling Green State University</a> <br /><br />
+Yang Chao, Ph.D. student in Thermal Science, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br />
+Nicholas Lopes, Ph.D. student in Thermal Science, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br />
+Vinusha Dasarla Giri Babu, Master student in Propulsion Design, Aerospace Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
 
 							</section>
 
