--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>Dr. Niu is an Assistant Professor of Computer Science at Bowling Green State University. Before joining BGSU, he was a Postdoc research fellow at School of Biomedical Informatics UTHealth, under the supervision of <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Cui Tao</a>. Before that, He received his Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
+										<p>Yang is a Ph. D. student of Mechanical Engineering at Embry-Riddle Aeronautical University, under the supervision of <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Sandra Boetcher</a>. Before that, He received his Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
 
 <h2>Teaching</h2>
 										</header>
@@ -63,8 +63,8 @@
 										<p>
 Address: <a href="https://www.google.com/maps/place/Hayes+Hall,+Bowling+Green,+OH+43403/@41.3778986,-83.6417875,17z/data=!3m1!4b1!4m5!3m4!1s0x883c0badd1809351:0x52fd781468c3b90d!8m2!3d41.3778986!4d-83.6395988">241 Hayes Hall, Bowling Green, Ohio, US, 43403</a><br />
 Phone: 419-372-3469 <br />
-Email: <a href = "mailto: sniu@bgsu.edu">sniu@bgsu.edu</a><br />
-Office Hours (Spring 2022): Tue 2PM - 4PM, other times by appointment.</p>										
+Email: <a href = "mailto: chaoy@my.erau.edu">chaoy@my.erau.edu</a><br />
+Office Hours (Spring 2022): TBD, other times by appointment.</p>										
 									</div>
 									<span class="image"><img src="images/Me.jpg" alt="" /></span>
 								</div>
@@ -77,7 +77,7 @@ Office Hours (Spring 2022): Tue 2PM - 4PM, other times by appointment.</p>
 										<header class="major">
 											<h2>Research Topics</h2>
 										</header>
-										<p>Dr. Niu's research area of interests include Machine Learning, Transfer Learning (Deep Transfer Learning), and Biomedical Informatics. More specifically, he is interested in exploring distant-domain transfer, cross-modality-transfer, graph neural works, and biomedical application with ML. Deep learning is great but it is facing significant difficulties, including but not limited to, insufficient data, incompatible computational power, and dynamic input structure. Below is a short list of open challenges:<br /><br />
+										<p>Yang's research area of interests include thermal and fluid sciences with expertise of heat transfer. More specifically, he is interested in exploring distant-domain transfer, cross-modality-transfer, graph neural works, and biomedical application with ML. Deep learning is great but it is facing significant difficulties, including but not limited to, insufficient data, incompatible computational power, and dynamic input structure. Below is a short list of open challenges:<br /><br />
 
 1. Transfer Learning-enabled Graph Neural Networks <br />
 2. HIV Prediction/Prevention with Graph Neural Networks <br />
@@ -111,7 +111,7 @@ Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYO
 										
 <p>Faculty Members: <br />
 
-Dr. Sandra Boetcher, Professor, ASME Fellow, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br />
+<a href="https://https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>, Professor, ASME Fellow, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br />
 Dr. Mark Ricklick, Associate Professor, Aerospace Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
 
 <p>Student Members: <br />
