--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>Yang is a Ph. D. student of Mechanical Engineering at Embry-Riddle Aeronautical University, under the supervision of <a href="https://sbmi.uth.edu/bsdi/index.htm">Dr. Sandra Boetcher</a>. Before that, He received his Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
+										<p>Yang is a Ph. D. student of Mechanical Engineering at Embry-Riddle Aeronautical University, under the supervision of <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>. Before that, He received his Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
 
 <h2>Teaching</h2>
 										</header>
@@ -111,7 +111,7 @@ Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYO
 										
 <p>Faculty Members: <br />
 
-<a href="https://https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>, Professor, ASME Fellow, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br />
+<a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>, Professor, ASME Fellow, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br />
 Dr. Mark Ricklick, Associate Professor, Aerospace Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
 
 <p>Student Members: <br />
