--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>Yang is a Ph. D. student of Mechanical Engineering at Embry-Riddle Aeronautical University, under the supervision of <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>. Before that, He received his Ph.D. degree in Computer Science at Embry-Riddle Aeronautical University, under the supervision of <a href="http://www.songlab.us">Dr. Houbing Song.</a></p>
+										<p>Yang is a Ph. D. student of Mechanical Engineering at Embry-Riddle Aeronautical University, under the supervision of <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>. Before that, He received his Master degree in Aerospace Engineeing concentrated in Propulsion Design at Embry-Riddle Aeronautical University, under the supervision of <a href="https://faculty.erau.edu/Mark.Ricklick">Dr. Mark Ricklick.</a></p>
 
 <h2>Teaching</h2>
 										</header>
