--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYO
 <p>Faculty Members: <br />
 
 <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>, Professor, ASME Fellow, Mechanical Enginnering, Embry-Riddle Aeronautical University</a> <br />
-Dr. Mark Ricklick, Associate Professor, Aerospace Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
+<a href="https://faculty.erau.edu/Mark.Ricklick">Dr. Mark Ricklick</a>, Associate Professor, Aerospace Enginnering, Embry-Riddle Aeronautical University</a> <br /><br />
 
 <p>Student Members: <br />
 
