--- a/index.html
+++ b/index.html
@@ -128,12 +128,14 @@ Vinusha Dasarla Giri Babu, Master student in Propulsion Design, Aerospace Enginn
 									<h2>My Little Hobbies</h2>
 									</header>
 										
-<p>Badminton: <br />
+<p>Cooking: <br />
+I am a good chef, fluent in cooking most of the Chinese food.</a> <br /><br />
 
-He plans compete in NC Open and Chicago Open in 2022.</a> <br /><br />
+Hiking: <br />
+I am a hiker, unfortunately that Florida is too flat.</a> <br /><br />
 
-Climbing: <br />
-He plans to go back to chattanooga for unfinished outdoor projects in 2022. </p>
+Shopping: <br />
+I like buying clothes from time to time as a self-reward of hard-working.</p>
 
 							</section>
 
