--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Hiking: <br />
 I am a hiker, unfortunately that Florida is too flat.</a> <br /><br />
 
 Shopping: <br />
-I like buying clothes from time to time as a self-reward of hard-working.</p>
+I like buying clothes from time to time, as a self-reward of hard-working.</p>
 
 							</section>
 
