--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@ Office Hours (Spring 2022): TBD, other times by appointment.</p>
 										</header>
 										<p>Featured Articles:<br />
 
-<a href="https://ieeexplore.ieee.org/abstract/document/9336290">A decade Survey of Transfer Learning (2010 - 2020).</a> <br />
+<a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext">Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO2.</a> <br /> 
+											
+<a href="https://arc.aiaa.org/doi/abs/10.2514/6.2021-3716">Heat Transfer Enhancement Optimization in Supercritical CO2 with Reduced-Order Model.</a> <br />
 
-<a href="https://ieeexplore.ieee.org/abstract/document/9378493">Feature-based Distant Domain Transfer Learning.</a> <br />
+<a href="https://asmedigitalcollection.asme.org/heattransfer/article-abstract/143/10/104501/1114795/Impact-of-Uncertainty-on-Prediction-of?redirectedFrom=fulltext">Impact of Uncertainty on Prediction of Supercritical CO2 Properties and Nusselt Numbers.</a> <br />
 
-<a href="https://ieeexplore.ieee.org/abstract/document/9459148">Spatial-Temporal Graph Data Mining for IoT-enabled Air Mobility Prediction.</a> <br /> 
+<a href="https://commons.erau.edu/edt/516/"> Analysis of Local Convection Heat Transfer Rates of Supercritical Carbon Dioxide in Tubes.</a> <br /><br />
 
-<a href="https://ieeexplore.ieee.org/abstract/document/9173537"> Zero-Bias Deep Learning for Accurate Identification of Internet-of-Things (IoT) Devices.</a> <br /><br />
-
-Full Publication List: <a href="https://scholar.google.com/citations?user=sSWFYOsAAAAJ&hl=en"> My GoogleScholar.</a> </p>										
+Full Publication List: <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ"> My GoogleScholar.</a> </p>										
 							</section>
 
 						<!-- People -->
