--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Office Hours (Spring 2022): TBD, other times by appointment.</p>
 
 <a href="https://commons.erau.edu/edt/516/"> Analysis of Local Convection Heat Transfer Rates of Supercritical Carbon Dioxide in Tubes.</a> <br /><br />
 
-Full Publication List: <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ"> My GoogleScholar.</a> </p>										
+Full Publication List: My<a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ"> Google Scholar.</a> </p>										
 							</section>
 
 						<!-- People -->
