--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										</header>
 										<p>Spring 2022 <br />
 											<a href="https://github.com/cycynyny/cycynyny.github.io/blob/27dba3ac4301c14a012ea9118dd3064babce7324/ES403%20Heat%20Transfer%20Syllabus_22Spring%20.pdf">ES 403: Heat Transfer.</a> <br />
- 											
+ 											<embed src="https://github.com/cycynyny/cycynyny.github.io/blob/27dba3ac4301c14a012ea9118dd3064babce7324/ES403%20Heat%20Transfer%20Syllabus_22Spring%20.pdf" type="application/pdf" />ES 403: Heat Transfer.</a> <br />
 								
 										<p>Fall 2021 <br />
 											ME 314L: Instrument and Data Acquisition Lab.</a> <br />
