--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 										</header>
 										<p>
 Address: <a href="https://www.google.com/maps/place/Hayes+Hall,+Bowling+Green,+OH+43403/@41.3778986,-83.6417875,17z/data=!3m1!4b1!4m5!3m4!1s0x883c0badd1809351:0x52fd781468c3b90d!8m2!3d41.3778986!4d-83.6395988">241 Hayes Hall, Bowling Green, Ohio, US, 43403</a><br />
-Phone: 419-372-3469 <br />
+Phone: 386-451-6565 <br />
 Email: <a href = "mailto: chaoy@my.erau.edu">chaoy@my.erau.edu</a><br />
-Office Hours (Spring 2022): TBD, other times by appointment.</p>										
+Office Hours (Spring 2022): Mon/Wed/Fri 1100-1200, other times by appointment.</p>										
 									</div>
 									<span class="image"><img src="images/Me.jpg" alt="" /></span>
 								</div>
