--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>Currently, I am a Ph. D. student in Mechanical Engineering at Embry-Riddle Aeronautical University, focus on heat transfer performance in <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">supercritical carbon dioxide(sCO2)</a>, under the supervision of <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>. Before that, I received my Master degree in Aerospace Engineeing, concentrated in Heat Transfer in Propulsion Design at Embry-Riddle Aeronautical University, under the supervision of <a href="https://faculty.erau.edu/Mark.Ricklick">Dr. Mark Ricklick.</a></p>
+										<p>Currently, I am a Ph. D. student in Mechanical Engineering at Embry-Riddle Aeronautical University, focus on heat transfer performance in <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">Supercritical Carbon Dioxide (sCO2)</a>, under the supervision of <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>. Before that, I received my Master degree in Aerospace Engineeing, concentrated in Heat Transfer in Propulsion Design at Embry-Riddle Aeronautical University, under the supervision of <a href="https://faculty.erau.edu/Mark.Ricklick">Dr. Mark Ricklick.</a></p>
 
 <h2>Teaching</h2>
 										</header>
