--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Office Hours (Spring 2022): Mon/Wed/Fri 1100-1200, other times by appointment.</
 										<header class="major">
 											<h2>Research Topics</h2>
 										</header>
-										<p>Yang's research area of interests include thermal and fluid sciences with expertise of heat transfer. More specifically, he is interested in exploring distant-domain transfer, cross-modality-transfer, graph neural works, and biomedical application with ML. Deep learning is great but it is facing significant difficulties, including but not limited to, insufficient data, incompatible computational power, and dynamic input structure. Below is a short list of open challenges:<br /><br />
+										<p>My research area of interests include thermal and fluid sciences with expertise of heat transfer. More specifically, my current field is heat transfer characteristics in supercritical carbon dioxide (sCO2). is carbon dioxide held above a critical temperature and pressure, which causes it to act like a gas while having the density of a liquid. It’s also nontoxic and nonflammable, having been used in dry cleaning processes as well as to decaffeinate coffee. Its supercritical state makes sCO2 a highly efficient fluid to generate power because small changes in temperature or pressure cause significant shifts in its density.<br /><br />
 
 1. Transfer Learning-enabled Graph Neural Networks <br />
 2. HIV Prediction/Prevention with Graph Neural Networks <br />
