--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										<p>I am a Ph. D. student in Mechanical Engineering at Embry-Riddle Aeronautical University, focus on heat transfer performance in <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">Supercritical Carbon Dioxide (sCO2)</a>, under the supervision of <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>. I received my Master degree in Aerospace Engineeing in 2020, concentrated in Heat Transfer in Propulsion System Design at Embry-Riddle Aeronautical University, under the supervision of <a href="https://faculty.erau.edu/Mark.Ricklick">Dr. Mark Ricklick.</a> Before that, I revceived my Bachelor degree in Aerospace Engineering from Civil Aviation University of China.
 											Besides research, I am also the Instructor of Record (IOR) for undergraduate level Heat Transfer class.</p>
 
-<h2>Teaching</h2>
+<h2>Teaching Experience</h2>
 										</header>
 										<p>Spring 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
@@ -65,7 +65,7 @@
 									   
 								
 
-<h2>Contact</h2>
+<h2>Contact Information</h2>
 										</header>
 										<p>
 Address: <a href="https://goo.gl/maps/J31z9jrRfBgsFU3T7">600 S Clyde Morris Blvd, Daytona Beach, FL 32114</a><br />
