--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
 <h2>Teaching Experience</h2>
 										</header>
+									        <p>Fall 2022 <br />
+											ES 403: Heat Transfer.</a> <br />
+								
 										<p>Spring 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
 								
