--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ sCO2 is a non-toxic working fluid with the ability to be applied to concentrated
 								<header class="major">
 									<h2>Publications</h2>
 										</header>
-										<p>Featured Articles:<br />
+						                                 Recently, I have 
+										<p>Featured Articles: <br />
 
 <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext">Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO2.</a> <br /> 
 											
