--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@ sCO2 is a non-toxic working fluid with the ability to be applied to concentrated
 								<header class="major">
 									<h2>Publications</h2>
 										</header>
-						                                <p>Currently, I am working on three other papers, one is about comprehensive review of heat transfer correlations of supercritical CO2, just got accepted in August, 2022. </a> <br />
+						                                <p>Currently, I am working on three other papers: <br /><br />
+											1. Paper about comprehensive review of heat transfer correlations of supercritical CO2, manuscript accepted in August, 2022. <br />
+											2. Paper about investigation in adiabatic section in supercritical CO2 pipe flow, just finished manuscript, to be proofreaded soon. <br />
+											3. Paper about machine learning in heat transfer correlations of supercritical CO2, still working on the manuscript. <br />
 									
 										<p>Featured Articles: <br />
 
