--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Vinusha Dasarla Giri Babu, Master student in Propulsion Design, Aerospace Enginn
 
 							</section>
 
-						<!-- My Little Hobbies -->
+						<!-- My Hobbies -->
 							<section id="MyHob" class="main">
 								<header class="major">
 									<h2>My Little Hobbies</h2>
@@ -147,10 +147,10 @@ Vinusha Dasarla Giri Babu, Master student in Propulsion Design, Aerospace Enginn
 I am a good chef, fluent in cooking most of the Chinese food.</a> <br /><br />
 
 Hiking: <br />
-I am a hiker, unfortunately that Florida is too flat.</a> <br /><br />
+I enjoy mountain view, unfortunately that Florida is too flat.</a> <br /><br />
 
-Shopping: <br />
-I like buying clothes from time to time, as a self-reward of hard-working.</p>
+Reading: <br />
+I am a bookworm, biographies and politics are my favorites. Currently, I am reading <mark>People, Power and Profits<mark> by Joseph Stiglitz.</p>
 
 							</section>
 
