--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ sCO2 is a non-toxic working fluid with the ability to be applied to concentrated
 											2. Paper about investigation in adiabatic section in supercritical CO2 pipe flow, the first draft of manuscript finished in August 2022. <br />
 											3. Paper about machine learning in heat transfer correlations of supercritical CO2, still working on the manuscript. <br />
 									
-										<p>Featured Articles: <br />
+										<p>Featured Articles: </p><br />
 
 <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext">Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO2.</a> <br /> 
 											
@@ -150,7 +150,7 @@ Hiking: <br />
 I enjoy mountain view, unfortunately that Florida is too flat.</a> <br /><br />
 
 Reading: <br />
-I am a bookworm, biographies and politics are my favorites. Currently, I am reading <mark>People, Power and Profits<mark> by Joseph Stiglitz.</p>
+I am a bookworm, biographies and politics are my favorites. Currently, I am reading <b>People, Power and Profits</b> by Joseph Stiglitz.</p>
 
 							</section>
 
