--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@ Vinusha Dasarla Giri Babu, Master student in Propulsion Design, Aerospace Enginn
 									<h2>My Hobbies</h2>
 									</header>
 										
-<p>Cooking: <br />
-I am a good chef, fluent in cooking most of the Chinese food.</a> <br /><br />
+<p>Cooking: Hiking: <br />
+I enjoy mountain view, my next goal is Appalachian Trail. Unfortunately that Florida is too flat.</a> <br /><br />
 
-Hiking: <br />
-I enjoy mountain view, unfortunately that Florida is too flat.</a> <br /><br />
+Cooking: <br />
+I am a good chef, fluent in cooking most of the Chinese food. btw, if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.</a> <br /><br />
 
 Reading: <br />
 I am a bookworm, biographies and politics are my favorites. Currently, I am reading <b>People, Power and Profits</b> by Joseph Stiglitz.</p>
