--- a/index.html
+++ b/index.html
@@ -146,11 +146,13 @@ Vinusha Dasarla Giri Babu, Master student in Propulsion Design, Aerospace Enginn
 <p>Cooking: Hiking: <br />
 I enjoy mountain view, my next goal is Appalachian Trail. Unfortunately that Florida is too flat.</a> <br /><br />
 
-Cooking: <br />
-I am a good chef, fluent in cooking most of the Chinese food. btw, if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.</a> <br /><br />
-
 Reading: <br />
 I am a bookworm, biographies and politics are my favorites. Currently, I am reading <b>People, Power and Profits</b> by Joseph Stiglitz.</p>
+
+Cooking: <br />
+I am a good chef, fluent in cooking most of the Chinese food. By the way, if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.</a> <br /><br />
+
+
 
 							</section>
 
