--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Vinusha Dasarla Giri Babu, Master student in Propulsion Design, Aerospace Enginn
 									<h2>My Hobbies</h2>
 									</header>
 										
-<p>Cooking: Hiking: <br />
+<p>Hiking: <br />
 I enjoy mountain view, my next goal is Appalachian Trail. Unfortunately that Florida is too flat.</a> <br /><br />
 
 Reading: <br />
