--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I am a Ph. D. student in Mechanical Engineering at Embry-Riddle Aeronautical University, focus on heat transfer performance in <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">Supercritical Carbon Dioxide (sCO2)</a>, under the supervision of <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>. I received my Master degree in Aerospace Engineeing in 2020, concentrated in Heat Transfer in Propulsion System Design at Embry-Riddle Aeronautical University, under the supervision of <a href="https://faculty.erau.edu/Mark.Ricklick">Dr. Mark Ricklick.</a> Before that, I revceived my Bachelor degree in Aerospace Engineering from Civil Aviation University of China.
+										<p>I am a Ph. D. student in Mechanical Engineering at Embry-Riddle Aeronautical University, focus on heat transfer performance in <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">Supercritical Carbon Dioxide (sCO2)</a>. I received my Master degree in Aerospace Engineeing in 2020, concentrated in Heat Transfer in Propulsion System Design at Embry-Riddle Aeronautical University. Before that, I revceived my Bachelor degree in Aerospace Engineering from Civil Aviation University of China.
 											Besides research, I am also the Instructor of Record (IOR) for undergraduate level Heat Transfer class.</p>
 
 <h2>Teaching Experience</h2>
