--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 Address: <a href="https://goo.gl/maps/J31z9jrRfBgsFU3T7">600 S Clyde Morris Blvd, Daytona Beach, FL 32114</a><br />
 Phone: 386-451-6565 <br />
 Email: <a href = "mailto: chaoy@my.erau.edu">chaoy@my.erau.edu</a><br />
-Office Hours (Spring 2022): Mon/Wed/Fri 1100-1200, other times by appointment.</p>										
+Office Hours (Fall 2022): Mon/Wed/Fri 1100-1200, or other times by appointment.</p>										
 									</div>
 									<span class="image"><img src="images/Me.jpg" alt="" /></span>
 								</div>
@@ -90,7 +90,7 @@ Office Hours (Spring 2022): Mon/Wed/Fri 1100-1200, other times by appointment.</
 										<p>My research area of interests include thermal and fluid sciences with expertise of heat transfer. More specifically, my current field is heat transfer characteristics in supercritical carbon dioxide (sCO2). sCO2 is carbon dioxide held above a critical temperature and pressure, which causes it to act like a gas while having the density of a liquid. It’s also nontoxic and nonflammable, having been used in dry cleaning processes as well as to decaffeinate coffee. Its supercritical state makes sCO2 a highly efficient fluid to generate power because small changes in temperature or pressure cause significant shifts in its density. Here are some benefits of sCO2 power cycles: <br /><br />
 
 1. Power generation is highly efficient: replacing steam or air with sCO2 as a thermal medium increases efficiency by as much as 10%. <br />
-2. Construction cost is much less: sCO2 equipment is 10% the size of conventional power plant components, a desk-sized sCO2 turbine could power 10,000 homes. <br />
+2. Construction cost is much less: sCO2 equipment is only 10% the size of conventional power plant components, a desk-sized sCO2 turbine could power 10,000 homes. <br />
 3. Environmental impact is reduced: 
 sCO2 is a non-toxic working fluid with the ability to be applied to concentrated solar power, natural gas, coal, biomass, geothermal energy, nuclear energy, ship-board propulsion, and waste heat recovery.<a/> </p>										
 							</section>
