--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Reading: <br />
 I am a bookworm, biographies and politics are my favorites. Currently, I am reading <b><a href="https://www.goodreads.com/book/show/43726589-people-power-and-profits?from_search=true&from_srp=true&qid=1VBYk7pFkU&rank=1">People, Power and Profits</a></b> by Joseph Stiglitz.</p>
 
 Cooking: <br />
-I am a good chef, fluent in cooking most of the Chinese food. By the way, if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.</a> <br /><br />
+I am a good chef, fluent in cooking most of the Chinese food. Fun fact: if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.</a> <br /><br />
 
 
 
