--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ sCO2 is a non-toxic working fluid with the ability to be applied to concentrated
 									<h2>Publications</h2>
 										</header>
 						                                <p>Currently, I am working on three papers: <br />
-											1. Paper about comprehensive review of heat transfer correlations of supercritical CO2, manuscript accepted in August, 2022. <br />
+											1. Paper about comprehensive review of heat transfer correlations of supercritical CO2, manuscript accepted on August 25th, 2022. <br />
 											2. Paper about investigation in adiabatic section in supercritical CO2 pipe flow, the first draft of manuscript finished in August 2022. <br />
 											3. Paper about machine learning in heat transfer correlations of supercritical CO2, still working on the manuscript. <br />
 									
