--- a/index.html
+++ b/index.html
@@ -101,11 +101,13 @@ sCO2 is a non-toxic working fluid with the ability to be applied to concentrated
 									<h2>Publications</h2>
 										</header>
 						                                <p>Currently, I am working on three papers: <br />
-											1. Paper about comprehensive review of heat transfer correlations of supercritical CO2, final manuscript was accepted on August 25th, 2022. <br />
+											1. Paper about comprehensive review of heat transfer correlations of supercritical CO2, published on September 16, 2022. <br />
 											2. Paper about investigation in adiabatic section in supercritical CO2 pipe flow, the first draft of manuscript was finished in August 2022. <br />
 											3. Paper about machine learning in heat transfer correlations of supercritical CO2, still working on the manuscript. <br />
 									
 										<p>Featured Articles: <br />
+
+<a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations">Comprehensive Review of Heat Transfer Correlations of Supercritical CO2 in Straight Tubes Near the Critical Point: A Historical Perspective.</a> <br /> 
 
 <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext">Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO2.</a> <br /> 
 											
