--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 											ES 403: Heat Transfer (Online).</a> <br />
 		
 		                                                                <p>Fall 2020 <br />
-											ES 403: Heat Transfer (Half online half F2F).</a> <br />
+											ES 403: Heat Transfer (Half Online haft in person).</a> <br />
+It was the first semester I taught as an instructor and COVID-19 hit. It turned out that most students will not watch online videos no matter how well the videos are organized.
 									   
 								
 
