--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				
 				                                                <p>Spring 2021 <br />
 											ES 403: Heat Transfer (Online).</a> <br />
-		
+	Even though I thought I was fully prepared, but fully online class is always a chellenge since no instant feedback from students can be seen. Most of my jokes did not work. Plagiarism was a big problem.		
 		                                                                <p>Fall 2020 <br />
 											ES 403: Heat Transfer (Half Online haft in person).</a> <br />
 It was the first semester I taught as an instructor and COVID-19 hit. It turned out that most students will not watch online videos no matter how well the videos are organized.
