--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	Even though I thought I was fully prepared this time, fully online class was a great chellenge since no instant feedback can be 
 	seen from students. Most of my jokes did not work, plagiarism was another big problem, almost nobody wanted to do work.		
 		                                                                <p>Fall 2020 <br />
-											ES 403: Heat Transfer (Half Online haft in person).</a> <br />
+											ES 403: Heat Transfer (Half online haft in person).</a> <br />
 It was the first semester I taught as an instructor but COVID-19 hit. It turned out that most students will not watch online videos no matter how well 
 the videos are organized. The in-person students had much better understanding and better grades.
 
