--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 										<p>Fall 2021 <br />
 											ME 314L: Instrument and Data Acquisition Lab.</a> <br />
 											ME 438L: Model-Based Control System Design Lab.</a> <br />
+		Due to understaffing, I went back to teach labs. The standard of the class was the same before COVID, but most students lacked motivations.
+		Adding extra lecturing realated to the latest technology inspired some of them. Excuses related to physical healthy were more commonly seen.
 				
 				                                                <p>Spring 2021 <br />
 											ES 403: Heat Transfer (Online).</a> <br />
