--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
 										</header>
 									        <p>Fall 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
+								Still in progress. So far so good. Actually, best of all the previous semesters.
 								
 										<p>Spring 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
+						COVID faded away. Students were happy to be in class again, so did I. My jokes worked, students mentioned that they 
+						enjoyed the classroom time, but quizzes and exams were too hard, maybe COVID effect was still here.
 								
 										<p>Fall 2021 <br />
 											ME 314L: Instrument and Data Acquisition Lab.</a> <br />
