--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										</header>
 									        <p>Fall 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
-								Still in progress. So far so good. Actually, best of all the previous semesters.
+								Still in progress. So far so good. Actually, it is the best of all the previous semesters.
 								
 										<p>Spring 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
