--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ the videos are organized. The in-person students had much better understanding a
 <h2>Contact Information</h2>
 										</header>
 										<p>
-Address: <a href="https://goo.gl/maps/J31z9jrRfBgsFU3T7">600 S Clyde Morris Blvd, Daytona Beach, FL 32114</a><br />
+Address: <a href="https://goo.gl/maps/J31z9jrRfBgsFU3T7">M building Office 114, 600 S Clyde Morris Blvd, Daytona Beach, FL 32114</a><br />
 Phone: 386-451-6565 <br />
 Email: <a href = "mailto: chaoy@my.erau.edu">chaoy@my.erau.edu</a><br />
 Office Hours (Fall 2022): Mon/Wed/Fri 1100-1200, or other times by appointment.</p>										
