--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span>
 						<h1>Yang Chao, Ph.D. student</h1>
-						<p>All models are wrong, but some are close and useful.</p>
+						<p>All models are wrong, but some are close enough to be useful.</p>
 					</header>
 
 				<!-- Nav -->
