--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 	seen from students. Most of my jokes did not work, plagiarism was another big problem, almost nobody wanted to do work.		
 		                                                                <p>Fall 2020 <br />
 											ES 403: Heat Transfer (Half online haft in person).</a> <br />
-It was the first semester I taught as an instructor but COVID-19 hit. It turned out that most students will not watch online videos no matter how well 
-the videos are organized. The in-person students had much better understanding and better grades.
+It was the first semester I taught as an instructor but COVID-19 hit. It turned out that most students would not watch online videos no matter how well 
+the videos were organized. The in-person students had much better understanding and better grades.
 
 									   
 								
